# geminigenerator

./: .env.example  .gitignore  README.md  pyproject.toml
src/gemini_mcp/: __init__.py  gemini_tools.py  imagemagick_tools.py  server.py  utils.py
